main/default/objects/Quote_Option__c/Quote_Option__c.object-meta.xml
<CustomObject>
    <label>Quote Option</label>
    <nameField>
        <displayFormat>QO-{000000}</displayFormat>
        <label>Quote Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>