main/default/objects/Quote_Option__c/fields/Actual_Premium_Final__c.field-meta.xml
<CustomField>
    <fullName>Actual_Premium_Final__c</fullName>
    <label>Actual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>