main/default/objects/Quote_Option__c/fields/Book_Premium_Annual__c.field-meta.xml
<CustomField>
    <fullName>Book_Premium_Annual__c</fullName>
    <label>Book Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>