main/default/objects/Quote_Option__c/fields/Bound__c.field-meta.xml
<CustomField>
    <fullName>Bound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected for Bound</label>
    <type>Checkbox</type>
</CustomField>