main/default/objects/Quote_Option__c/fields/Broker_Netted_Down_Premium__c.field-meta.xml
<CustomField>
    <fullName>Broker_Netted_Down_Premium__c</fullName>
    <label>Broker Netted Down Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>