main/default/objects/Quote_Option__c/fields/Change_In_Actual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Change_In_Actual_Premium__c</fullName>
    <label>Change In Actual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>