main/default/objects/Quote_Option__c/fields/Change_in_IPT__c.field-meta.xml
<CustomField>
    <fullName>Change_in_IPT__c</fullName>
    <label>Change in IPT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>