main/default/objects/Quote_Option__c/fields/Change_in_Total_Cost_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Total_Cost_to_Client__c</fullName>
    <label>Change in Total Cost to Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>