main/default/objects/Quote_Option__c/fields/Due_from_Broker__c.field-meta.xml
<CustomField>
    <fullName>Due_from_Broker__c</fullName>
    <label>Due from Broker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>