main/default/objects/Quote_Option__c/fields/Due_to_Insurers__c.field-meta.xml
<CustomField>
    <fullName>Due_to_Insurers__c</fullName>
    <label>Due to Insurers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>