main/default/objects/Quote_Option__c/fields/Fee_Annual__c.field-meta.xml
<CustomField>
    <fullName>Fee_Annual__c</fullName>
    <label>Annual Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>