main/default/objects/Quote_Option__c/fields/Fee_Final__c.field-meta.xml
<CustomField>
    <fullName>Fee_Final__c</fullName>
    <label>Final Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>