main/default/objects/Quote_Option__c/fields/Final_Discretion__c.field-meta.xml
<CustomField>
    <fullName>Final_Discretion__c</fullName>
    <label>Final Discretion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>