main/default/objects/Quote_Option__c/fields/Final_Technical_Premium__c.field-meta.xml
<CustomField>
    <fullName>Final_Technical_Premium__c</fullName>
    <label>Final Technical Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>