main/default/objects/Quote_Option__c/fields/Increased_Limit_Factor__c.field-meta.xml
<CustomField>
    <fullName>Increased_Limit_Factor__c</fullName>
    <label>Increased Limit Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>