main/default/objects/Quote_Option__c/fields/IPT__c.field-meta.xml
<CustomField>
    <fullName>IPT__c</fullName>
    <label>IPT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>