main/default/objects/Quote_Option__c/fields/IPT_on_Broker_Netted_Down_Premium__c.field-meta.xml
<CustomField>
    <fullName>IPT_on_Broker_Netted_Down_Premium__c</fullName>
    <label>IPT on BNDP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>