main/default/objects/Quote_Option__c/fields/Limit_Of_Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Limit_Of_Indemnity__c</fullName>
    <label>Limit Of Indemnity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>