main/default/objects/Quote_Option__c/fields/MGA_Commission_Amout__c.field-meta.xml
<CustomField>
    <fullName>MGA_Commission_Amout__c</fullName>
    <label>MGA  Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>