main/default/objects/Quote_Option__c/fields/NDPB_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>NDPB_Commission_Percent__c</fullName>
    <label>NDPB Commission Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>