main/default/objects/Quote_Option__c/fields/Netted_Down_MGA_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Netted_Down_MGA_Commission_Amount__c</fullName>
    <label>Netted Down MGA Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>