main/default/objects/Quote_Option__c/fields/Netted_Down_MGA_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Netted_Down_MGA_Commission_Percent__c</fullName>
    <label>Netted Down MGA Commission Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>