main/default/objects/Quote_Option__c/fields/NonProRated_BNDP__c.field-meta.xml
<CustomField>
    <fullName>NonProRated_BNDP__c</fullName>
    <label>NonProRated BNDP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>