main/default/objects/Quote_Option__c/fields/Option_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_Type__c</fullName>
    <label>Option Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Limit</fullName>
            </value>
            <value>
                <fullName>Free Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>