main/default/objects/Quote_Option__c/fields/Override_Actual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Override_Actual_Premium__c</fullName>
    <label>Override Actual Premium %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>