main/default/objects/Quote_Option__c/fields/Override_Actual_Premium_Percent__c.field-meta.xml
<CustomField>
    <fullName>Override_Actual_Premium_Percent__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Override Actual Premium %</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>