main/default/objects/Quote_Option__c/fields/Override_BNDP__c.field-meta.xml
<CustomField>
    <fullName>Override_BNDP__c</fullName>
    <label>Override BNDP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>