main/default/objects/Quote_Option__c/fields/Override_Fee__c.field-meta.xml
<CustomField>
    <fullName>Override_Fee__c</fullName>
    <label>Override Fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>