main/default/objects/Quote_Option__c/fields/OverrideBrokerNettedDownPremiumPercent__c.field-meta.xml
<CustomField>
    <fullName>OverrideBrokerNettedDownPremiumPercent__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Override BNDP %</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>