main/default/objects/Quote_Option__c/fields/Price_Adequacy__c.field-meta.xml
<CustomField>
    <fullName>Price_Adequacy__c</fullName>
    <label>Price Adequacy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>