main/default/objects/Quote_Option__c/fields/Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rate Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>