main/default/objects/Quote_Option__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected for Quote</label>
    <type>Checkbox</type>
</CustomField>