main/default/objects/Quote_Option__c/fields/Technical_Premium_Discretion__c.field-meta.xml
<CustomField>
    <fullName>Technical_Premium_Discretion__c</fullName>
    <label>Technical Premium Discretion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>