main/default/objects/Quote_Option__c/fields/Total_Cost_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_To_Client__c</fullName>
    <label>Total Cost To Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>